[package]
name = "labrynth-pub-game"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

[dependencies]
bevy = {git = "https://github.com/insrcd/bevy"}
rhai = "0.18.1" 
log = { version = "0.4.8", features = ["serde"] }
serde = "1.0.115"   
rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"
[features]
