[package]
name = "labrynth-game"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"


[dependencies]
bevy = {git = "https://github.com/Bobox214/bevy.git", branch = "fix_134_135" }
rhai = "0.18.1" 
log = { version = "0.4.8", features = ["serde"] }
serde = "1.0.115"   
rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"

# Local dependencies

lab-builders = { path = "crates/lab-builders", version = "0.1.0" }
lab-demo = { path = "crates/lab-demo", version = "0.1.0" }

[features]
