[package]
name = "labrynth-game"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"


[dependencies]
bevy = { version = "0.1.3" }
rhai = "0.18.1" 
log = { version = "0.4.8", features = ["serde"] }
serde = "1.0.115"   
rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"

# Local 

lab-world = { path = "crates/lab-world", version = "0.1.0" }
lab-entities = { path = "crates/lab-entities", version = "0.1.0" }
lab-sprites = { path = "crates/lab-sprites", version = "0.1.0" }
lab-input = { path = "crates/lab-input", version = "0.1.0" }
lab-demo = { path = "crates/lab-demo", version = "0.1.0" }
lab-builder = { path = "crates/lab-builder", version = "0.1.0" }
lab-core = { path = "crates/lab-core", version = "0.1.0" }

[features]
