[package]
name = "lab-ai"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

bevy = { git = "https://github.com/insrcd/bevy" }

rand = "0.7.3"

lab-core = {path = "../lab-core"}
lab-sprites  = {path = "../lab-sprites"}
lab-entities = {path = "../lab-entities"}
lab-input    = {path = "../lab-input"}
lab-world    = {path = "../lab-world"}
