[package]
name = "lab-builder"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

bevy = { version = "0.2.0" }

strum = "0.19.2"
strum_macros = "0.19.2"

lab-entities = { path = "../lab-entities" }
lab-sprites = { path = "../lab-sprites" }
lab-input = { path = "../lab-input" }
lab-world = { path = "../lab-world" }

lab-core = {path="../lab-core"}