[package]
name = "lab-core"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

bevy = { git = "https://github.com/bevyengine/bevy" }

rand = "0.7.3"
strum = "0.19.2"
strum_macros = "0.19.2"
defaults = "0.2.0"

uuid = { version = "0.8", features = ["v4", "serde"] }