[package]
name = "lab-data"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

strum = "0.19.2"
strum_macros = "0.19.2"
defaults = "0.2.0"

uuid = { version = "0.8", features = ["v4", "serde"] }