[package]
name = "lab-demo"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

bevy = "0.1.3"

lab-entities = { path = "../lab-entities" }
lab-sprites = { path = "../lab-sprites" }
lab-input = { path = "../lab-input" }
lab-world = { path = "../lab-world" }
lab-builder = { path = "../lab-builder" }
lab-core = { path = "../lab-core" }