[package]
name = "lab-entities"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

strum = "0.19.2"
strum_macros = "0.19.2"
rand = "0.7.3"

bevy = { git = "https://github.com/insrcd/bevy.git" }

lab-core = { path = "../lab-core" }
lab-sprites = { path = "../lab-sprites" }