[package]
name = "lab-input"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

bevy = {git = "https://github.com/Bobox214/bevy.git", branch = "fix_134_135" }

lab-entities = { path = "../lab-entities" }
lab-sprites = { path = "../lab-sprites" }
lab-world = { path = "../lab-world" }
lab-core = { path = "../lab-core" }