[package]
name = "lab-sprites"
version = "0.1.0"
authors = ["Adam Shaw <discourse@gmail.com>"]
edition = "2018"

[dependencies]

log = { version = "0.4", features = ["release_max_level_info"] }
serde = { version = "1.0", features = ["derive"]}

bevy = { git = "https://github.com/insrcd/bevy.git" }

lab-core = { path = "../lab-core" }